--- a/package.json
+++ b/package.json
@@ -1,25 +1,42 @@
 {
   "name": "grunt-shrinkwrap",
-  "version": "0.0.1",
   "description": "Grunt task for shrinkwrapping your project's dependencies via npm shrinkwrap",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "version": "0.1.0",
+  "homepage": "https://github.com/mstuart/grunt-shrinkwrap",
+  "author": {
+    "name": "mstuart",
+    "email": "stuartmark@gmail.com",
+    "url": "http://markstuart.me"
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/mstuart/grunt-shrinkwrap.git"
+    "url": "https://github.com/mstuart/grunt-shrinkwrap.git"
   },
-  "keywords": [
-    "shrinkwrap",
-    "npm",
-    "npm-shrinkwrap",
-    "dependencies"
-  ],
-  "author": "mstuart",
-  "license": "MIT",
   "bugs": {
     "url": "https://github.com/mstuart/grunt-shrinkwrap/issues"
   },
-  "homepage": "https://github.com/mstuart/grunt-shrinkwrap"
+  "licenses": [
+    {
+      "type": "MIT",
+      "url": "https://github.com/mstuart/grunt-shrinkwrap/blob/master/LICENSE-MIT"
+    }
+  ],
+  "engines": {
+    "node": ">= 0.8.0"
+  },
+  "scripts": {
+    "test": "grunt test"
+  },
+  "devDependencies": {
+    "grunt-contrib-jshint": "~0.6.0",
+    "grunt-contrib-clean": "~0.4.0",
+    "grunt-contrib-nodeunit": "~0.2.0",
+    "grunt": "~0.4.2"
+  },
+  "peerDependencies": {
+    "grunt": "~0.4.2"
+  },
+  "keywords": [
+    "gruntplugin"
+  ]
 }
