--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   "keywords": [
     "shrinkwrap",
     "npm-shrinkwrap",
-    "shrinkwrap.json"
+    "shrinkwrap.json",
+    "gruntplugin"
   ]
 }
