--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "type": "git",
     "url": "https://github.com/mstuart/grunt-shrinkwrap.git"
   },
+  "publishConfig": {
+    "registry": "http://registry.npmjs.org/"
+  },
   "bugs": {
     "url": "https://github.com/mstuart/grunt-shrinkwrap/issues"
   },
